force-app/main/default/objects/CountryLayer__c/CountryLayer__c.object-meta.xml
<CustomObject>
    <label>Country</label>
    <nameField>
        <label>Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CountryLayers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>