force-app/main/default/objects/CountryLayer__c/fields/Country_ISO_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_Code_2__c</fullName>
    <label>Country ISO Code 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>