force-app/main/default/objects/CountryLayer__c/fields/Country_ISO_Code_3__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_Code_3__c</fullName>
    <label>Country ISO Code 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>